[package]
edition = "2021"
name = "ylab-edge-pro"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"

[lib]
name = "ylab"
path = "src/ylab/mod.rs"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-time = { version = "0.1.0", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }

log = "0.4"

## USB + logging via USB support
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.1.0" }
static_cell = "1.2.0"
fixed = "1.23.1"
fixed-macro = "1.2.0"
embedded-hal = "0.2.7"
embedded-hal-async = "0.2.0-alpha.1"
heapless = "0.7.16"
usbd-serial = "0.1.1"
usb-device = "0.2.9"
nb = "1.1.0"
embassy-stm32 = { version = "0.1.0", features = ["nightly", "unstable-traits", "defmt", "stm32f446ze", "unstable-pac", "memory-x", "time-driver-any", "exti", "embedded-sdmmc", "chrono"]}
postcard = "1.0.6"
itoa = "1.0.9"
#ryu = "1.0.15"
serde = { version = "1.0", default-features = false, features = ["derive"] }
atomic_enum = "0.2.0"
#bincode = "1.3.3"

## network drivers for cyw43 (pico W) or wiznet w5500
# embassy-net = { version = "0.1.0", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
# embassy-net-driver-channel = { version = "0.1.0"}
# embassy-net-w5500 = { version = "0.1.0", features = ["defmt"] }
# cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
# cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }

# embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
# embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
# embassy-net-w5500 = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
# cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }
# cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'

